--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 target/
 server/src/main/resources/static
 !.mvn/wrapper/maven-wrapper.jar
+application-gitignored.properties
 
 ### STS ###
 .apt_generated
